--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
         <link rel="stylesheet" href="./css/materialize.min.css" />
         <link rel="stylesheet" href="./css/site.css"/>
         <script src="./js/plugins/materialize.min.js"></script>
-        <script src="./js/plugins/jquery-3.3.1.min.js"></script>
 
         <title>Brandon Hein's Git Page</title>
     </head>
@@ -50,5 +49,6 @@
 
         <script src="./js/plugins/jquery-3.3.1.min.js"></script>
         <script src="./js/plugins/mustache.min.js"></script>
+        <script src="./js/page-nav-magic.js"></script>
     </body>
 </html>
