--- a/pages/locationlookup/index.html
+++ b/pages/locationlookup/index.html
@@ -26,6 +26,7 @@ $("#about-me").click(function(e){
     $.ajax({
         type: "GET",
         url: url,
+        async: true,
         success: function(results) {
             alert(JSON.stringify(results));
         }
@@ -37,6 +38,7 @@ $("#what-time-is-it").click(function(e){
     $.ajax({
         type: "GET",
         url: "https://1njp7ql9lb.execute-api.us-east-2.amazonaws.com/whattimeisit/please",
+        async: true,
         success: function(results) {
             alert(JSON.stringify(results));
         }
