--- a/pages/locationlookup/index.html
+++ b/pages/locationlookup/index.html
@@ -18,30 +18,4 @@
         </div>
     </div>
 </div>
-<script>
-$("#about-me").click(function(e){
-    e.preventDefault();
-    var zipCode = $("#zip-lookup").val();
-    var url = "https://1njp7ql9lb.execute-api.us-east-2.amazonaws.com/lookup/zipcode?codes=" + zipCode;
-    $.ajax({
-        type: "GET",
-        url: url,
-        async: true,
-        success: function(results) {
-            alert(JSON.stringify(results));
-        }
-    })
-});
-
-$("#what-time-is-it").click(function(e){
-    e.preventDefault();
-    $.ajax({
-        type: "GET",
-        url: "https://1njp7ql9lb.execute-api.us-east-2.amazonaws.com/whattimeisit/please",
-        async: true,
-        success: function(results) {
-            alert(JSON.stringify(results));
-        }
-    })
-});
-</script>
+<script src="./js/location-invoker.js"></script>
