--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
                     </div>
                 </form>
             </div>
+        </div>
+        <div class="container">
             <div class="row" id="sub-page">
             </div>
         </div>
