--- a/pages/locationlookup/index.html
+++ b/pages/locationlookup/index.html
@@ -18,4 +18,30 @@
         </div>
     </div>
 </div>
-<script src="./js/location-invoker.js"></script>
+<script>
+$("#zip-lookup-btn").click(function(e){
+    e.preventDefault();
+    var zipCode = $("#zip-lookup").val();
+    var url = "https://1njp7ql9lb.execute-api.us-east-2.amazonaws.com/lookup/zipcode?codes=" + zipCode;
+    $.ajax({
+        type: "GET",
+        url: url,
+        async: true,
+        success: function(results) {
+            alert(JSON.stringify(results));
+        }
+    })
+});
+
+$("#what-time-is-it").click(function(e){
+    e.preventDefault();
+    $.ajax({
+        type: "GET",
+        url: "https://1njp7ql9lb.execute-api.us-east-2.amazonaws.com/whattimeisit/please",
+        async: true,
+        success: function(results) {
+            alert(JSON.stringify(results));
+        }
+    })
+});
+</script>
