--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
                 </form>
             </div>
         </div>
-        <div class="container">
-            <div class="row" id="sub-page">
-            </div>
+        <div class="container" id="sub-page">
         </div>
 
         <script src="./js/plugins/mustache.min.js"></script>
