--- a/pages/locationlookup/index.html
+++ b/pages/locationlookup/index.html
@@ -14,4 +14,5 @@
     <div class="row" id="location-lookup-results">
     </div>
 </div>
+<script src="./js/colorful-json.js"></script>
 <script src="./js/location-invoker.js"></script>
