--- a/pages/locationlookup/index.html
+++ b/pages/locationlookup/index.html
@@ -11,8 +11,8 @@
             </div>
         </div>
     </div>
-    <div class="row" id="location-lookup-results">
-    </div>
+    <pre class="row" id="location-lookup-results">
+    </pre>
 </div>
 <script src="./js/colorful-json.js"></script>
 <script src="./js/location-invoker.js"></script>
