--- a/pages/locationlookup/index.html
+++ b/pages/locationlookup/index.html
@@ -3,10 +3,11 @@
     <p>
         I wanted to take some public data and expose it via an API. Leveraging AWS Lambda and AWS API Gateway, I achieved a Serverless Application 
         that will spin up and use resources when invoked, as well as provide data related to a zip code.
+        Using Lambda and the API gateway, you only pay for the resources you use
     </p>
     <div class="row">
         <div class="row">
-            <div class="input-field col s2">
+            <div class="input-field col s3">
                 <p>This endpoint returns back associated current times in the US timezones</p>
                 <button id="what-time-is-it" class="waves-effect waves-light btn" type="button">What Time Is It?</button>
             </div>
@@ -18,8 +19,7 @@
         </div>
     </div>
     <div id="location-lookup-tech-request">
-        <strong id="method"></strong>
-        <p id="request-url"></p>
+        <p id="request-url"><b id="method"></b></p>
     </div>
     <p>Response:</p>
     <pre class="row" id="location-lookup-results">
