clean up request

--- a/pages/locationlookup/index.html
+++ b/pages/locationlookup/index.html
@@ -19,7 +19,7 @@
         </div>
     </div>
     <div id="location-lookup-tech-request">
-        <p id="request-url"><b id="method"></b></p>
+        <p id="request-url"></p>
     </div>
     <p>Response:</p>
     <pre class="row" id="location-lookup-results">
