--- a/pages/addressvalidation/index.html
+++ b/pages/addressvalidation/index.html
@@ -5,20 +5,20 @@
     </p>
     <div class="row">
         <div class="row">
-            <div class="input-field col s4">
+            <div class="input-field col s3">
                 <input id="street" type="text" />
                 <label for="street">House # and street name</label>
             </div>
-            <div class="input-field col s4">
+            <div class="input-field col s3">
                 <input id="city" type="text" />
                 <label for="city">City</label>
             </div>
-            <div class="input-field col s4">
+            <div class="input-field col s1">
                 <input id="state" type="text" />
                 <label for="state">State</label>
             </div>
         </div>
-        <button id="zip-lookup-btn" class="waves-effect waves-light btn" type="button">Validate</button>
+        <button id="validate-address" class="waves-effect waves-light btn" type="button">Validate</button>
     </div>
     <div id="address-validation-tech-request">
         <p id="request-url"></p>
