add some explainations

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             </div>
         </div>
         <div class="container" id="sub-page">
+            <p>Still a work in progress... check out Location Lookup and Address Validation to invoke some sample API work that I've done</p>
         </div>
 
         <script src="./js/plugins/mustache.min.js"></script>
