--- a/pages/addressvalidation/index.html
+++ b/pages/addressvalidation/index.html
@@ -1,8 +1,11 @@
 <div id="address-validation-area">
     <h5>Address Validation Service API</h5>
     <p>
-        why
+        Similar to the Location Lookup API I made, I leveraged AWS Lambda and the AWS API Gateway to create a Serverless Application,
+        that aggregates/orchestrates calls to my Location Lookup API, USPS Address API, Google Address API, and US Census tract API.
+        It compiles a response used for any application that needs to know/validate addresses
     </p>
+    <p>Give it a try, by adding a address, city, and state abbrivation</p>
     <div class="row">
         <div class="row">
             <div class="input-field col s3">
