--- a/pages/locationlookup/index.html
+++ b/pages/locationlookup/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="input-field col s4">
                 <input id="zip-lookup" type="text" />
-                <label for="zip-lookup">Zip Code</label>
+                <label for="zip-lookup">Zip Code(s)</label>
                 <button id="zip-lookup-btn" class="waves-effect waves-light btn" type="button">Search</button>
             </div>
         </div>
